trying top add 1/10 for subdivs, prints added

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                       <option value ="4">Four</option>
                       <option value ="5">Five</option>
                       <option value ="6">Six </option>
+                      <option value ="7">Seven </option>
                 </select>
             </label>
                         <label>
