brute force attempt reversed

--- a/index.html
+++ b/index.html
@@ -45,10 +45,22 @@
                 <Input type = "radio"  name="rulerUnits" value="centimeters" >
                     Centimeters
                 <br>
+                
                 <Input type = "radio"  name= "subUnits" value = "2"   checked>
                     Fractional            
+
                 <Input type = "radio"  name= "subUnits" value = "10">
                     Decimal
+                <br>
+            <label>
+            <span>Direction:</span>
+            </label>
+                <Input type = "radio"  name= "direction" value = "increasing" checked>
+                    IncreasingLeftToRight
+                <Input type = "radio"  name= "direction" value = "decreasing">
+                    DecreasingLeftToRight
+                <br>
+                <br>
             <label>
                 <span>Subdivisions: </span>
                 <select id="subUnitExponent"  style="width:30%" >
